Prevent unnecessary horizontal scrollbar in dialogs

--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -58,6 +58,7 @@ body {
 .dialogContent {
   width: 20rem;
   height: 10rem;
+  overflow-x: hidden;
 }
 
 .center {
